# ucc

./: CMakeLists.txt  README.md
include/: ucc.h
include/ucc/: arch.h  attr.h  builtin.h  cc.h  cpu.h  feature.h  features.h  kw.h  libc.h  libs.h  os.h  plat.h  pp.h  std.h  verno.h
test/: general.c  ucc.c
